--- a/lon_nyc_marathon_analysis/marathon_data_munging.ipynb
+++ b/lon_nyc_marathon_analysis/marathon_data_munging.ipynb
@@ -12,6 +12,7 @@
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import re\n",
     "from IPython.core.pylabtools import figsize\n",
     "from bs4 import BeautifulSoup"
    ]
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -175,11 +176,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[u'45-49' u'18-39' u'55-59' u'40-44' u'50-54' u'65-69' u'60-64' u'' u'70+']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>country</th>\n",
+       "      <th>age_cat</th>\n",
+       "      <th>13.1_mi</th>\n",
+       "      <th>26.2_mi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>43744</th>\n",
+       "      <td>shekarchi dan</td>\n",
+       "      <td>gbr</td>\n",
+       "      <td>18-39</td>\n",
+       "      <td>1.874722</td>\n",
+       "      <td>3.778611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43745</th>\n",
+       "      <td>de isidro serrano jes s antonio</td>\n",
+       "      <td>esp</td>\n",
+       "      <td>45-49</td>\n",
+       "      <td>1.653056</td>\n",
+       "      <td>3.403056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43746</th>\n",
+       "      <td>moraleda menendez jos luis</td>\n",
+       "      <td>esp</td>\n",
+       "      <td>55-59</td>\n",
+       "      <td>2.017778</td>\n",
+       "      <td>4.018889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43747</th>\n",
+       "      <td>naor costa martin</td>\n",
+       "      <td>esp</td>\n",
+       "      <td>40-44</td>\n",
+       "      <td>1.847222</td>\n",
+       "      <td>3.657778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43748</th>\n",
+       "      <td>pata franco jesus antonio</td>\n",
+       "      <td>esp</td>\n",
+       "      <td>50-54</td>\n",
+       "      <td>1.655556</td>\n",
+       "      <td>3.462222</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  name country age_cat   13.1_mi   26.2_mi\n",
+       "43744                    shekarchi dan     gbr   18-39  1.874722  3.778611\n",
+       "43745  de isidro serrano jes s antonio     esp   45-49  1.653056  3.403056\n",
+       "43746       moraleda menendez jos luis     esp   55-59  2.017778  4.018889\n",
+       "43747                naor costa martin     esp   40-44  1.847222  3.657778\n",
+       "43748        pata franco jesus antonio     esp   50-54  1.655556  3.462222"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create same age categories in NYC Marathon data for comparison\n",
     "print (lon_data.age_cat.unique())\n",
@@ -195,13 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "lon_data.to_pickle(\"london_marathon_2015_processed.pickle\")"
+    "lon_data.to_pickle(\"london_marathon_2015_processed.pickle\")\n",
+    "lon_data.to_csv(\"london_marathon_2015_processed.csv\", index=False)"
    ]
   },
   {
@@ -215,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -249,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -275,6 +358,152 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>state</th>\n",
+       "      <th>country</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>26.2_mi</th>\n",
+       "      <th>5_km</th>\n",
+       "      <th>10_km</th>\n",
+       "      <th>15_km</th>\n",
+       "      <th>20_km</th>\n",
+       "      <th>13.1_mi</th>\n",
+       "      <th>25_km</th>\n",
+       "      <th>30_km</th>\n",
+       "      <th>35_km</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>49457</th>\n",
+       "      <td>van der veeken clasina</td>\n",
+       "      <td>no</td>\n",
+       "      <td>nzl</td>\n",
+       "      <td>84</td>\n",
+       "      <td>f</td>\n",
+       "      <td>6.711944</td>\n",
+       "      <td>0.780000</td>\n",
+       "      <td>1.538889</td>\n",
+       "      <td>2.304722</td>\n",
+       "      <td>3.092222</td>\n",
+       "      <td>3.269722</td>\n",
+       "      <td>3.895833</td>\n",
+       "      <td>4.685833</td>\n",
+       "      <td>5.514167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49458</th>\n",
+       "      <td>roest-bomers agnes</td>\n",
+       "      <td>nl</td>\n",
+       "      <td>ned</td>\n",
+       "      <td>84</td>\n",
+       "      <td>f</td>\n",
+       "      <td>5.673056</td>\n",
+       "      <td>0.576667</td>\n",
+       "      <td>1.175000</td>\n",
+       "      <td>1.790833</td>\n",
+       "      <td>2.438056</td>\n",
+       "      <td>2.582778</td>\n",
+       "      <td>3.181111</td>\n",
+       "      <td>3.870556</td>\n",
+       "      <td>4.591667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49459</th>\n",
+       "      <td>takahashi yoshiko</td>\n",
+       "      <td>ny</td>\n",
+       "      <td>jpn</td>\n",
+       "      <td>80</td>\n",
+       "      <td>f</td>\n",
+       "      <td>5.678889</td>\n",
+       "      <td>0.660556</td>\n",
+       "      <td>1.276389</td>\n",
+       "      <td>1.907500</td>\n",
+       "      <td>2.543056</td>\n",
+       "      <td>2.686389</td>\n",
+       "      <td>3.220833</td>\n",
+       "      <td>3.904444</td>\n",
+       "      <td>4.653889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49460</th>\n",
+       "      <td>bedard ginette</td>\n",
+       "      <td>ny</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>82</td>\n",
+       "      <td>f</td>\n",
+       "      <td>5.329444</td>\n",
+       "      <td>0.559444</td>\n",
+       "      <td>1.134444</td>\n",
+       "      <td>1.711944</td>\n",
+       "      <td>2.327500</td>\n",
+       "      <td>2.472500</td>\n",
+       "      <td>2.989167</td>\n",
+       "      <td>3.632778</td>\n",
+       "      <td>4.333611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49461</th>\n",
+       "      <td>monaco marcia</td>\n",
+       "      <td>ny</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>83</td>\n",
+       "      <td>f</td>\n",
+       "      <td>10.364444</td>\n",
+       "      <td>1.107222</td>\n",
+       "      <td>2.249722</td>\n",
+       "      <td>3.646667</td>\n",
+       "      <td>5.263333</td>\n",
+       "      <td>5.565000</td>\n",
+       "      <td>6.703611</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         name state country  age gender    26.2_mi      5_km  \\\n",
+       "49457  van der veeken clasina    no     nzl   84      f   6.711944  0.780000   \n",
+       "49458      roest-bomers agnes    nl     ned   84      f   5.673056  0.576667   \n",
+       "49459       takahashi yoshiko    ny     jpn   80      f   5.678889  0.660556   \n",
+       "49460          bedard ginette    ny     usa   82      f   5.329444  0.559444   \n",
+       "49461           monaco marcia    ny     usa   83      f  10.364444  1.107222   \n",
+       "\n",
+       "          10_km     15_km     20_km   13.1_mi     25_km     30_km     35_km  \n",
+       "49457  1.538889  2.304722  3.092222  3.269722  3.895833  4.685833  5.514167  \n",
+       "49458  1.175000  1.790833  2.438056  2.582778  3.181111  3.870556  4.591667  \n",
+       "49459  1.276389  1.907500  2.543056  2.686389  3.220833  3.904444  4.653889  \n",
+       "49460  1.134444  1.711944  2.327500  2.472500  2.989167  3.632778  4.333611  \n",
+       "49461  2.249722  3.646667  5.263333  5.565000  6.703611       NaN       NaN  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nyc_data.tail()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -283,13 +512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "nyc_data.to_pickle(\"nyc_marathon_2015_processed.pickle\")"
+    "nyc_data.to_pickle(\"nyc_marathon_2015_processed.pickle\")\n",
+    "nyc_data.to_csv(\"nyc_marathon_2015_processed.csv\", index=False)"
    ]
   }
  ],
